I opened this folder after 4 days and i commit a change to this folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <p> What i have learnt till now</p>
 <ol>
     <li>git clone "http" we will get address of the git repo from code section :- simply use copy paste this will clone the same repo to your local machine.</li>
-    <li>cd mysensibleRepo : one good thing that ileart is press tab key to auto complete folder name.</li>
+    <li>cd mysensibleRepo : one good thing that i learnt is press tab key to auto complete folder name.</li>
     <li>git status : <br>
         <li>if no changes are made : Your branch is up to date with 'origin/main'.
 
